NAV OVERFLOW VISIBLE TO MAKE SURE UNDERLINE SHOES

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -121,6 +121,7 @@ p {
 #navigation {
 	display: flex;
 	column-gap: 0.5em;
+	overflow: visible;
 	flex-direction: row;
 	justify-content: center;
 }
